--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -85,6 +85,16 @@
   = f.text_field :language_fluent
 
   .form-group
+    %label.form-label{for: :grade} Grade
+    %ul.inline-list
+      = f.collection_check_boxes :grades, grade_names, :first, :last, checked: @person.try(:grades) do |b|
+        %li
+          .form-group
+            = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
+
+  = f.text_area :previous_positions
+
+  .form-group
     = f.submit 'Save', class: 'button'
 
   .form-group
