Change Country field label

--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -40,7 +40,7 @@
   = f.text_field :city
 
   .form-group
-    %label.form-label{for: :country} Country
+    %label.form-label{for: :country} Country (Market)
     = f.country_select :country,
       {priority_countries: ["GB"]},
       class: 'form-control'
