Got people search and mini-profile into nav without failing tests

--- a/app/assets/stylesheets/digital-workspace-overrides/application.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/application.scss
@@ -649,6 +649,21 @@
 }
 
 // ------------------------------------
+// people-finder forms
+
+ul.inline-list {
+	li {
+		display: block;
+		float: left;
+		width: 50%;
+	}
+}
+
+.form-label + .inline_list {
+	margin-top: 20px;
+}
+
+// ------------------------------------
 // govuk-search
 
 .mod-search {
