--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -36,6 +36,8 @@
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
 
+  = f.text_field :other_uk
+  = f.text_field :other_overseas
   = f.text_field :location_in_building
   = f.text_field :city
 
