--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,8 +3,6 @@
 
 = render partial: 'breadcrumbs'
 
-/= render 'shared/search'
-
 .grid-row.mod-heading
   .column-full
     %h1.heading-xlarge.mod-heading-border
@@ -34,6 +32,8 @@
     - unless @group.leaf_node?
       - if @all_people_count > 0 && @group.parent.present?
         = link_to "View #{ @all_people_count > 1 ? 'all' : '' } people", people_group_path(@group), class: 'view-all-people'
+    - if can_add_person_here?
+      = link_to 'Create a new profile', new_person_path, class: 'add-new-person'
 
 - unless @group.leaf_node?
   = render partial: "teams_in_team"
