--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -8,5 +8,5 @@
         - SearchHelper::FILTERS.each_value do |value|
           = hidden_field_tag 'search_filters[]', value
       = submit_tag 'Search', class: 'mod-search-submit'
-  - if can_add_person_here?
-    = link_to 'Create a new profile', new_person_path, class: 'add-new-person'
+  /- if can_add_person_here?
+  /  = link_to 'Create a new profile', new_person_path, class: 'add-new-person'
