continued rationalising css then some work on the inner profile view to bring inline with visuals

--- a/app/views/people/_completeness.html.haml
+++ b/app/views/people/_completeness.html.haml
@@ -1,7 +1,7 @@
 
 .complete-your-profile{class: ('complete' if person.complete?) }
-
-  Profile completeness
+  %span.heading-medium
+    Profile completeness
   .grid-row
     .column-three-quarters
       .mod-complete
