--- a/app/views/search/_person.html.haml
+++ b/app/views/search/_person.html.haml
@@ -21,7 +21,6 @@
                 - else
                   = "#{ membership.role }, " if membership.role?
                   = link_to membership.group.name, membership.group, { data: search_result_analytics_attributes(index) }
-
           %li.cb-person-phone
             = call_to(person.phone)
           %li.cb-person-email
@@ -33,3 +32,10 @@
                 Current project(s)
               %br/
               = es_highlighter(hit, person, :current_project)
+
+          - if person.languages.present?
+            %li.cb-person-current-project.core-16
+              %span.bold
+                Languages
+              %br/
+              = es_highlighter(hit, person, :languages)
