CSS for org browser on edit profile page and search placeholders

--- a/app/assets/stylesheets/digital-workspace-overrides/components/_search-profile-bar.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_search-profile-bar.scss
@@ -187,3 +187,24 @@
 		}
 	}
 }
+
+.js-enabled {
+	.mod-search {
+		.mod-search-form {
+			label {
+				padding-right: 40px;
+				overflow: hidden;
+				word-break: break-all;
+			}
+			.mod-search-input-wrapper {
+				position: relative;
+				z-index: 10;
+			}
+			.mod-search-input {
+				&:focus {
+					background-color: #ffffff;
+				}
+			}
+		}
+	}
+}
