--- a/app/assets/stylesheets/digital-workspace-overrides/components/_edit-profile.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_edit-profile.scss
@@ -15,3 +15,30 @@ ul.inline-list {
 .form-label + ul.inline-list {
 	margin-top: 20px;
 }
+
+// ------------------------------------
+// organisation browser
+
+.org-browser {
+	border: 2px solid $brand_color_a;
+	.team {
+		a {
+			color: $brand_color_a;
+		}
+		h3 {
+			background-color: #fdf6f3;
+			border-bottom: 2px solid $brand_color_a;
+			line-height: 2.6em;
+		}
+		ul {
+			li {
+				border-bottom: 2px solid $brand_color_a;
+			}
+		}
+		.team-back {
+			background-color: #fcece7;
+			border-bottom: 2px solid $brand_color_a;
+			color: $brand_color_a;
+		}
+	}
+}
