--- a/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
@@ -85,10 +85,15 @@
 						text-transform: none;
 						font-size: 16px;
 						line-height: 1.75;
-						background: #fff;
+						background: transparent;
 						border-radius: 0;
+						position: relative;
+						z-index: 2;
 						-webkit-appearance: none;
 						-moz-appearance: none;
+						&:focus {
+							background-color: #ffffff;
+						}
 					}
 					.search-submit-wrapper {
 						width: 1%;
