--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -31,7 +31,7 @@
     %label.form-label{for: :building} Building I work in (optional)
     %span.form-hint Select options from the list
     %ul.inline-list
-      = f.collection_check_boxes :building, building_names,:last, :first,  checked: @person.try(:building) do |b|
+      = f.collection_check_boxes :building, building_names,:first, :last,  checked: @person.try(:building) do |b|
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
@@ -78,7 +78,7 @@
   .form-group
     %label.form-label{for: :key_skills} Key skills
     %ul.inline-list
-      = f.collection_check_boxes :key_skills, key_skill_names, :last, :first , checked: @person.try(:key_skills) do |b|
+      = f.collection_check_boxes :key_skills, key_skill_names, :first, :last, checked: @person.try(:key_skills) do |b|
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
@@ -95,7 +95,7 @@
   .form-group
     %label.form-label{for: :learning_and_development} Learning and development interests (optional)
     %ul.inline-list
-      = f.collection_check_boxes :learning_and_development, learning_and_development_names, :last, :first, checked: @person.try(:learning_and_development) do |b|
+      = f.collection_check_boxes :learning_and_development, learning_and_development_names, :first, :last, checked: @person.try(:learning_and_development) do |b|
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
@@ -103,7 +103,7 @@
   .form-group
     %label.form-label{for: :networks} Networks I belong to (optional)
     %ul.inline-list
-      = f.collection_check_boxes :networks, network_names, :last, :first, checked: @person.try(:networks) do |b|
+      = f.collection_check_boxes :networks, network_names, :first, :last, checked: @person.try(:networks) do |b|
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
@@ -111,14 +111,14 @@
   .form-group
     %label.form-label{for: :key_responsibilities} Key areas of responsibility within my job (optional)
     %ul.inline-list
-      = f.collection_check_boxes :key_responsibilities, key_responsibility_names, :last, :first, checked: @person.try(:key_responsibilities) do |b|
+      = f.collection_check_boxes :key_responsibilities, key_responsibility_names, :first, :last, checked: @person.try(:key_responsibilities) do |b|
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
   .form-group
     %label.form-label{for: :additional_responsibilities} My additional roles and responsibilities (optional)
     %ul.inline-list
-      = f.collection_check_boxes :additional_responsibilities, additional_responsibility_names, :last, :first, checked: @person.try(:additional_responsibilities) do |b|
+      = f.collection_check_boxes :additional_responsibilities, additional_responsibility_names, :first, :last, checked: @person.try(:additional_responsibilities) do |b|
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
