--- a/app/assets/stylesheets/digital-workspace-overrides/components/_search-profile-bar.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_search-profile-bar.scss
@@ -162,16 +162,16 @@
 			color: #FFFFFF;
 
 			&:before {
-				content: '';
-				display: block;
-				position: absolute;
-				top: 18px;
-				left: -30px;
-				background-image: asset-data-url("icon-user.png");
-				background-repeat: no-repeat;
+				// content: '';
+				// display: block;
+				// position: absolute;
+				// top: 18px;
+				// left: -30px;
+				// background-image: asset-data-url("icon-user.png");
+				// background-repeat: no-repeat;
 
-				width: 16px;
-				height: 20px;
+				// width: 16px;
+				// height: 20px;
 			}
 		}
 	}
