added javascript to add focus class on search bars

--- a/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
@@ -107,7 +107,8 @@
 						-webkit-appearance: none;
 						-moz-appearance: none;
 						z-index: 2;
-						&:focus {
+						&:focus,
+						&.focus {
 							background-color: #fff;
 						}
 					}
