--- a/app/assets/stylesheets/digital-workspace-overrides/components/_search-profile-bar.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_search-profile-bar.scss
@@ -201,7 +201,8 @@
 				z-index: 10;
 			}
 			.mod-search-input {
-				&:focus {
+				padding: 6px;
+				&:focus, &.focus {
 					background-color: #ffffff;
 				}
 			}
