--- a/app/views/layouts/peoplefinder.html.haml
+++ b/app/views/layouts/peoplefinder.html.haml
@@ -53,7 +53,7 @@
           %label.search-label
             Search site
           .search-wrapper
-            %input{:type => 'search', :title => 'Search Workspace', :class => 'search-element search-input js-class-toggle'}
+            %input{:type => 'search', :id =>'site-search-input', :title => 'Search Workspace', :class => 'search-element search-input js-class-toggle js-search-focus'}
             .search-element.search-submit-wrapper
               %button{:type => 'submit', :class => 'search-submit'}
                 Search Workspace
