--- a/app/views/people/_completeness.html.haml
+++ b/app/views/people/_completeness.html.haml
@@ -12,11 +12,11 @@
     .column-one-quarter
       .score
         = "#{person.completion_score}%"
-
-  - if person.incomplete?
-    - complete_text = (current_user == person) ? 'complete your profile' : 'complete this profile'
-    %p
-      = edit_person_link(complete_text, person, activity: 'complete')
-  - else
-    %p.clear-both
-      = "Thanks for improving People Finder for everyone!"
+  - if can_edit_profiles?
+    - if person.incomplete?
+      - complete_text = (current_user == person) ? 'complete your profile' : 'complete this profile'
+      %p
+        = edit_person_link(complete_text, person, activity: 'complete')
+    - else
+      %p.clear-both
+        = "Thanks for improving People Finder for everyone!"
