--- a/app/views/shared/_edit_links_NOT_USED.html.haml
+++ b/app/views/shared/_edit_links_NOT_USED.html.haml
@@ -1,5 +1,5 @@
 %div.edit-links
-  - if can_add_person_here?
+  - if can_edit_profiles? && can_add_person_here?
     = link_to 'Create a new profile', new_person_path, class: 'add-new-person'
 
   - if @group
