--- a/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
@@ -63,8 +63,8 @@
 				padding-top: 9px;
 				padding-right: 15px;
 				&.js-hidden {
-					font-size: 0px;
-					padding: 0px;
+					color: $brand_color_a;
+					visibility: visible;
 				}
 			}
 			form {
